退出登录接口，swagger文档
