# internal/app/model/dto/comment_dto.go
@@ -1,11 +1,7 @@
 package dto
 
-import (
-	"github.com/1255177148/golangTask4/internal/types"
-)
-
 type CommentDTO struct {
-	ID        uint           `json:"id"`
-	Content   string         `json:"content"`
-	CreatedAt types.JSONTime `json:"createdAt"`
+	ID        uint   `json:"id"`
+	Content   string `json:"content"`
+	CreatedAt string `json:"createdAt"`
 }
