# internal/app/model/po/Post.go
@@ -1,14 +1,14 @@
 package po
 
 import (
-	"github.com/1255177148/golangTask4/internal/types"
+	"time"
 )
 
 type Post struct {
-	ID        uint           `json:"id"`
-	Title     string         `json:"title"`
-	Content   string         `json:"content"`
-	UserId    uint           `json:"userId"`
-	CreatedAt types.JSONTime `json:"createdAt"`
-	UpdatedAt types.JSONTime `json:"updatedAt"`
+	ID        uint      `json:"id"`
+	Title     string    `json:"title"`
+	Content   string    `json:"content"`
+	UserId    uint      `json:"userId"`
+	CreatedAt time.Time `json:"createdAt"`
+	UpdatedAt time.Time `json:"updatedAt"`
 }
