# internal/router/login_router.go
@@ -4,6 +4,7 @@ import (
 	"github.com/1255177148/golangTask4/internal/app/controller"
 	"github.com/1255177148/golangTask4/internal/app/repository"
 	"github.com/1255177148/golangTask4/internal/app/service"
+	"github.com/1255177148/golangTask4/internal/middleware"
 	"github.com/gin-gonic/gin"
 	"github.com/jmoiron/sqlx"
 	"gorm.io/gorm"
@@ -17,6 +18,7 @@ func RegisterLoginRouter(rg *gin.RouterGroup, db *gorm.DB, sqlxDB *sqlx.DB) {
 	{
 		login.GET("/getCaptcha", loginCtrl.GetCaptcha)
 		login.POST("/register", loginCtrl.RegisterUser)
-		login.GET("/", loginCtrl.Login)
+		login.POST("/", loginCtrl.Login)
+		login.POST("/logout", loginCtrl.Logout, middleware.JWTMiddleware())
 	}
 }
